# finance-tracker-app

./: .env.example  .gitignore  API.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  Makefile  PROJECT_SPEC.md.txt  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  finance_tutor.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_token_version.py  003_add_email_verified.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: exceptions.py
backend/app/models/: __init__.py  audit_log.py  base.py  finance.py  homework.py  lesson.py  student.py  user.py
backend/app/schemas/: admin.py  auth.py  common.py  finance.py  homework.py  lesson.py  portal.py  student.py  user.py
backend/app/security/: jwt.py  password.py  permissions.py
backend/app/services/: admin_service.py  audit_service.py  auth_service.py  email_service.py  finance_service.py  homework_service.py  lesson_service.py  storage_service.py  student_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_api.py  test_auth_api.py  test_finance_api.py  test_homework_api.py  test_lesson_api.py  test_password_reset.py  test_portal_api.py  test_student_api.py  test_users_api.py
backend/tests/unit/: test_audit_service.py  test_auth_service.py  test_finance_service.py  test_homework_service.py  test_lesson_service.py  test_storage_service.py  test_student_service.py  test_user_service.py
(+140 files in other folders)
